<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.sspdim.model.ChatListViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ChatListFragment">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/chat_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:padding="16dp"
            app:chatListData="@{viewModel.chatList}"
            tools:listitem="@layout/chat_list_item"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_friend_action_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/add_friend"
            android:src="@drawable/ic_baseline_person_add_24"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/take_backup_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@android:color/white" />

        <TextView
            android:id="@+id/add_friend_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/add_friend_action_button"
            app:layout_constraintTop_toTopOf="@+id/add_friend_action_button"
            app:layout_constraintBottom_toBottomOf="@+id/add_friend_action_button"
            android:visibility="gone"
            android:padding="10dp"
            android:text="@string/add_friend_textview"
        />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/take_backup_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/backup_data"
            android:src="@drawable/ic_baseline_cloud_download_24"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/logout_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@android:color/white" />

        <TextView
            android:id="@+id/take_backup_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/take_backup_button"
            app:layout_constraintTop_toTopOf="@+id/take_backup_button"
            app:layout_constraintBottom_toBottomOf="@+id/take_backup_button"
            android:visibility="gone"
            android:padding="10dp"
            android:text="@string/backup_data_textview"
            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/logout_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/red_700"
            android:contentDescription="@string/logout"
            android:src="@drawable/ic_baseline_exit_to_app_24"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/extra_options_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@android:color/white" />

        <TextView
            android:id="@+id/logout_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/logout_button"
            app:layout_constraintTop_toTopOf="@+id/logout_button"
            app:layout_constraintBottom_toBottomOf="@+id/logout_button"
            android:visibility="gone"
            android:padding="10dp"
            android:text="@string/logout_textview"
            />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/extra_options_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Actions"
            app:icon="@android:drawable/ic_input_add"
            android:layout_margin="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    </layout>