<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.sspdim.model.ChatViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background">

        <TextView
            android:id="@+id/friend_request_pending_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/friend_request_pending"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/chat_message_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:visibility="gone"
            app:layoutManager="LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/enter_message_text_input"
            tools:listitem="@layout/my_message_item">

        </androidx.recyclerview.widget.RecyclerView>

        <EditText
            android:id="@+id/enter_message_text_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_message"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColorHint="#757575"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/send_button"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/send_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/enter_message_text_input" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>